@@ -4,6 +4,7 @@ import es.in2.desmos.api.exception.HashLinkException;
 import lombok.extern.slf4j.Slf4j;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
@@ -34,13 +35,11 @@ public class ApplicationUtils {
         // Convert the hexadecimal strings to byte arrays
         byte[] hash1 = hexStringToByteArray(hash1Hex);
         byte[] hash2 = hexStringToByteArray(hash2Hex);
-
         // Start the MessageDigest with the first hash and update it with the second hash
         MessageDigest digest = MessageDigest.getInstance(SHA_256_ALGORITHM);
         digest.update(hash1);
         digest.update(hash2);
         byte[] result = digest.digest();
-
         // Convert the result to a hexadecimal string
         return bytesAHex(result);
     }
@@ -59,7 +58,6 @@ public class ApplicationUtils {
         if (s.startsWith("0x")) {
             s = s.substring(2);
         }
-
         return HexFormat.of().parseHex(s);
     }
 
@@ -87,7 +85,7 @@ public class ApplicationUtils {
 
     public static boolean hasHlParameter(String urlString) {
         try {
-            URL url = new URL(urlString);
+            URL url = URI.create(urlString).toURL();
             Map<String, String> queryParams = splitQuery(url);
             log.debug("Query params: {}", queryParams);
             if (queryParams.containsKey("hl")) {
@@ -96,7 +94,7 @@ public class ApplicationUtils {
             } else {
                 throw new HashLinkException("Query param hl not found");
             }
-        } catch (MalformedURLException e) {
+        } catch (IllegalArgumentException | MalformedURLException e) {
             throw new HashLinkException("Error parsing dataLocation");
         }
     }
